updated tables for menu and customer orders - css fixed to center and align.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,6 +57,7 @@ div.logo a {
 nav {
   padding-bottom: 30px;
   text-align: center;
+  /* position: fixed; */
 }
 
 img {
@@ -158,22 +159,55 @@ div.alert{
   display: table;
 }
 
-/* div.meal-filter form  {
+ div.trip-filter form  {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  background-color: #f7f7f9;
-  flex-direction: row
-} */
+}
 
-div.meal-filter form {
+
+
+div.filter form {
   background: none;
 }
 
-div.meal-filter form input[type="submit"] {
+div.filter form input[type="submit"] {
   margin-top: 0;
 }
 
+div.meals  {
+  text-align: center;
+}
+ th, tr {
+  text-align: left;
+  /* padding-top: 12px; */
+  padding-bottom: 12px;
+}
+
+ td {
+  padding-bottom: 12px;
+  padding-right: 25px
+}
+
+ table {
+  display: flex;
+  justify-content: center;
+}
+
+#trips{
+  text-align: center;
+}
+
+.trips-table {
+  margin-top: 20px;
+}
+
+/* #trips table {
+  /* display: flex; */
+  /*align-content: center;
+} */
+
+tr:hover {background-color: #f5f5f5;}
 /* header::after {
   content: '';
   display: table;
